# Ray-Tracer

./: CMakeLists.txt  EXAMPLE-final-project-workload.xlsx  README.md  assignment.html  final-project-final-workload.xlsx  final-project-workload.xlsx  vcpkg.json
data/: CornellBox-Mirror-Rotated.mtl  cube.mtl  monkey.mtl
framework/: CMakeLists.txt
framework/include/framework/: image.h  imguizmo.h  mesh.h  opengl_includes.h  ray.h  shader.h  trackball.h  variant_helper.h  window.h
framework/src/: image.cpp  imguizmo.cpp  mesh.cpp  shader.cpp  trackball.cpp  window.cpp
framework/src/ImGuizmo/: ImGuizmo.cpp  ImGuizmo.h
src/: bounding_volume_hierarchy.cpp  bounding_volume_hierarchy.h  draw.cpp  draw.h  main.cpp  ray_tracing.cpp  ray_tracing.h  scene.cpp  scene.h  screen.cpp  screen.h
